build: added django_settings_modeult to env definition

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,5 +43,6 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+          DJANGO_SETTINGS_MODULE: ${{ secrets.DJANGO_SETTINGS_MODULE}}
         run: |
           coverage run manage.py test && coverage report --fail-under=90
