--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
+    "coverage": "^0.4.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jest": "^29.5.0",
