--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,8 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "next-router-mock": "^0.9.3"
   }
 }
