--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,6 @@ jobs:
         run: npm ci
       - name: Run RTL tests
         working-directory: ./frontend
+        env:
+          CI: true
         run: npm test
