--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+amqp==5.1.1
 asgiref==3.6.0
 astroid==2.15.4
+billiard==4.1.0
+celery==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.6
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 coverage==7.2.5
 dill==0.3.6
 Django==4.2.1
@@ -9,20 +16,27 @@ django-cors-headers==3.14.0
 djangorestframework==3.14.0
 idna==3.4
 isort==5.12.0
+kombu==5.3.1
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 platformdirs==3.5.0
+prompt-toolkit==3.0.39
 psycopg2==2.9.6
 pylint==2.17.3
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.30.0
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.5.0
+tzdata==2023.3
 urllib3==2.0.2
+vine==5.0.0
+wcwidth==0.2.6
 wrapt==1.15.0
 youtube-transcript-api==0.6.0
