--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.1.1
 asgiref==3.6.0
 astroid==2.15.4
+async-timeout==4.0.2
 billiard==4.1.0
 celery==5.3.1
 certifi==2023.5.7
@@ -12,6 +13,7 @@ click-repl==0.3.0
 coverage==7.2.5
 dill==0.3.6
 Django==4.2.1
+django-celery-results==2.5.1
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
 idna==3.4
@@ -28,6 +30,7 @@ pylint-plugin-utils==0.7
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+redis==4.6.0
 requests==2.30.0
 six==1.16.0
 sqlparse==0.4.4
