--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   redis:
     restart: always
     image: redis:latest
+    container_name: podfinder-redis
     ports:
       - '6379:6379'
     volumes:
