--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
     "coverage": "^0.4.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jest": "^29.5.0",
