--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,13 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 coverage==7.2.5
+cron-descriptor==1.4.0
 dill==0.3.6
 Django==4.2.1
+django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
+django-timezone-field==6.0
 djangorestframework==3.14.0
 idna==3.4
 isort==5.12.0
@@ -27,6 +30,7 @@ psycopg2==2.9.6
 pylint==2.17.3
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
