build: added elasticsearch to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,5 +20,12 @@ services:
     volumes:
       - ./redis_data:/data
 
+  elasticsearch:
+    image: elasticsearch:7.8.1
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+
 volumes:
   postgres_data:
