build: updated elastic search and added volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,13 @@ services:
       - ./redis_data:/data
 
   elasticsearch:
-    image: elasticsearch:7.8.1
+    image: elasticsearch:7.17.9
     environment:
       - discovery.type=single-node
     ports:
       - "9200:9200"
+    volumes:
+      - ./elasticsearch:/usr/share/elasticsearch/data
 
 volumes:
   postgres_data:
