--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Django==4.2.1
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
+django-debug-toolbar==4.2.0
 django-elasticsearch-dsl==7.3
 django-timezone-field==6.0
 djangorestframework==3.14.0
