--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,12 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+      elasticsearch:
+        image: elasticsearch:7.17.9
+        ports:
+          - "9200:9200"
+        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" -- health-interval=10s --health-timeout=5s --health-retires=10
+
       postgres:
         image: postgres:13
         env:
