--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "next-router-mock": "^0.9.3"
