build: installed dj-database-url

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 amqp==5.1.1
 asgiref==3.6.0
-astroid==2.15.4
+astroid==2.8.6
+asttokens==2.4.0
 async-timeout==4.0.2
 billiard==4.1.0
+black==23.9.1
 celery==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
@@ -13,25 +15,35 @@ click-repl==0.3.0
 coverage==7.2.5
 cron-descriptor==1.4.0
 dill==0.3.6
+dj-database-url==2.1.0
 Django==4.2.1
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
 django-debug-toolbar==4.2.0
 django-elasticsearch-dsl==7.3
+django-nine==0.2.7
 django-timezone-field==6.0
 djangorestframework==3.14.0
+dparse==0.6.3
 elasticsearch==7.17.9
 elasticsearch-dsl==7.4.1
 idna==3.4
+isodate==0.6.1
 isort==5.12.0
 kombu==5.3.1
 lazy-object-proxy==1.9.0
-mccabe==0.7.0
+markdown-it-py==3.0.0
+mccabe==0.6.1
+mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
 platformdirs==3.5.0
 prompt-toolkit==3.0.39
 psycopg2==2.9.6
-pylint==2.17.3
+Pygments==2.16.1
+pylint==2.11.1
 pylint-django==2.5.3
 pylint-plugin-utils==0.7
 python-crontab==3.0.0
@@ -40,8 +52,10 @@ python-dotenv==1.0.0
 pytz==2023.3
 redis==4.6.0
 requests==2.30.0
+rich==13.6.0
 six==1.16.0
 sqlparse==0.4.4
+toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.5.0
@@ -49,5 +63,5 @@ tzdata==2023.3
 urllib3==1.26.16
 vine==5.0.0
 wcwidth==0.2.6
-wrapt==1.15.0
+wrapt==1.13.3
 youtube-transcript-api==0.6.0
