--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,15 @@
 version: '3.9'
 services:
-  db:
-    restart: always
-    image: postgres:13
-    container_name: podfinder-postgres 
-    env_file:
-      - '.env'
-    ports:
-      - "5432:5432"
-    volumes:
-      - ./postgres_data:/var/lib/postgresql/data/
 
-  redis:
-    restart: always
-    image: redis:latest
-    container_name: podfinder-redis
-    ports:
-      - '6379:6379'
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
     volumes:
-      - ./redis_data:/data
+      - static_volume:/backend/static
+    ports:
+      - "8000:8000"
 
   elasticsearch:
     image: elasticsearch:7.17.9
@@ -27,7 +18,31 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./elasticsearch:/usr/share/elasticsearch/data
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    depends_on:
+      - backend
+
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+        - "80:80"
+        - "443:443"
+    volumes:
+        - ./nginx/nginx-setup.conf:/etc/nginx/conf.d/default.conf:ro
+        - static_volume:/var/www/backend/static
+        - ./certbot/www:/var/www/certbot/:ro
+        - ./certbot/conf/:/etc/nginx/ssl/:ro
+    depends_on:
+        - backend
+        - elasticsearch
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
-  postgres_data:
+  static_volume:
+  elasticsearch_data:
