--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ djangorestframework==3.14.0
 dparse==0.6.3
 elasticsearch==7.17.9
 elasticsearch-dsl==7.4.1
+gunicorn==21.2.0
 idna==3.4
 isodate==0.6.1
 isort==5.12.0
@@ -63,5 +64,6 @@ tzdata==2023.3
 urllib3==1.26.16
 vine==5.0.0
 wcwidth==0.2.6
+whitenoise==6.6.0
 wrapt==1.13.3
 youtube-transcript-api==0.6.0
