--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
+      elasticsearch:
+        image: elasticsearch:7.17.9
+        ports:
+          - "9200:9200"
+        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
+
       postgres:
         image: postgres:13
         env:
