feat: add api subdomain to nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ error_log /var/log/nginx/podcastphrasefinder.error.log;
 server {
     listen 80;
     listen [::]:80;
-    server_name podcastphrasefinder.com www.podcastphrasefinder.com;
+    server_name api.podcastphrasefinder.com www.api.podcastphrasefinder.com;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -23,7 +23,7 @@ server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name podcastphrasefinder.com www.podcastphrasefinder.com;
+    server_name api.podcastphrasefinder.com www.api.podcastphrasefinder.com;
 
     ssl_certificate /etc/nginx/ssl/live/podcastphrasefinder.com/fullchain.pem;
     ssl_certificate /etc/nginx/ssl/live/podcastphrasefinder.com/privkey.pem;
