refactor: added home redirects to main site

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://podcastphrasefinder.com;
     }
 
 }
@@ -26,8 +26,12 @@ server {
     server_name api.podcastphrasefinder.com www.api.podcastphrasefinder.com;
 
     ssl_certificate /etc/nginx/ssl/live/podcastphrasefinder.com/fullchain.pem;
-    ssl_certificate /etc/nginx/ssl/live/podcastphrasefinder.com/privkey.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/podcastphrasefinder.com/privkey.pem;
 
+    location / {
+        return 301 https://podcastphrasefinder.com;
+    }
+    
     location ~ ^/(admin|api)/ {
         try_files $uri @proxy_api;
     }
