fix: added user to celery-beat due to permission errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
 
   celery-beat:
     build: .
+    user: root
     container_name: pod-celery-beat
     command: celery -A backend beat -l INFO
     volumes:
