--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
   CD:
     runs-on: ubuntu-latest
     needs: CI
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }}
     environment: Production
     steps:
       - uses: actions/checkout@v3
