--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  push:
+    branches: ["main"]
   pull_request:
     branches: ["main"]
 
@@ -52,23 +54,3 @@ jobs:
           YOUTUBE_V3_API_KEY: ${{ secrets.YOUTUBE_V3_API_KEY}}
         run: |
           coverage run manage.py test && coverage report --fail-under=90
-
-  CD:
-    runs-on: ubuntu-latest
-    needs: CI
-    if: ${{ github.ref == 'refs/heads/main' }}
-    environment: Production
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          command_timeout: 200m
-          script: |
-            cd ${{ secrets.FILE_PATH }}
-            git pull
-            docker-compose build --no-cache --compress
-            docker-compose up -d
