--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -21,5 +21,5 @@ jobs:
           script: |
             cd ${{ secrets.FILE_PATH }}
             git pull
-            docker-compose build --no-cache --compress
-            docker-compose up -d
+            docker compose build --no-cache --compress
+            docker compose up -d
