--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
         - "80:80"
         - "443:443"
     volumes:
-        - ./nginx/nginx-setup.conf:/etc/nginx/conf.d/default.conf:ro
+        - ./nginx/nginx-setup.conf:/etc/nginx/conf.d:ro
         - static_volume:/var/www/backend/static
         - ./certbot/www:/var/www/certbot/:ro
         - ./certbot/conf/:/etc/nginx/ssl/:ro
