fix: updated folder name for ssl cert

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,8 +25,8 @@ server {
 
     server_name api.podcastphrasefinder.com www.api.podcastphrasefinder.com;
 
-    ssl_certificate /etc/nginx/ssl/live/podcastphrasefinder.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/podcastphrasefinder.com/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/api.podcastphrasefinder.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/api.podcastphrasefinder.com/privkey.pem;
 
     location / {
         return 301 https://podcastphrasefinder.com;
