fix: spelling mistake causing elasticsearch to crash

--- a/elasticsearch.yml
+++ b/elasticsearch.yml
@@ -2,8 +2,8 @@ cluster.name: "podfinder-docker-cluster"
 node.name: "podfinder-docker-single-node"
 network.host: 0.0.0.0
 
-https.cors.enabled: true
+http.cors.enabled: true
 http.cors.allow-origin: "https://api.podcastphrasefinder.com"
-https.cors.allow-header: "Authorization"
+http.cors.allow-header: "Authorization"
 
 ingest.geoip.downloader.enabled: false
