--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ billiard==4.1.0
 black==23.9.1
 celery==5.3.1
 certifi==2023.5.7
+cffi==1.16.0
 charset-normalizer==3.1.0
 click==8.1.6
 click-didyoumean==0.3.0
@@ -14,9 +15,12 @@ click-plugins==1.1.1
 click-repl==0.3.0
 coverage==7.2.5
 cron-descriptor==1.4.0
+cryptography==41.0.7
+defusedxml==0.7.1
 dill==0.3.6
 dj-database-url==2.1.0
 Django==4.2.1
+django-allauth==0.60.0
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
@@ -39,11 +43,13 @@ markdown-it-py==3.0.0
 mccabe==0.6.1
 mdurl==0.1.2
 mypy-extensions==1.0.0
+oauthlib==3.2.2
 packaging==23.1
 pathspec==0.11.2
 platformdirs==3.5.0
 prompt-toolkit==3.0.39
 psycopg2==2.9.6
+pycparser==2.21
 Pygments==2.16.1
 PyJWT==2.8.0
 pylint==2.11.1
@@ -52,9 +58,11 @@ pylint-plugin-utils==0.7
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python3-openid==3.2.0
 pytz==2023.3
 redis==4.6.0
 requests==2.30.0
+requests-oauthlib==1.3.1
 rich==13.6.0
 sentry-sdk==1.34.0
 six==1.16.0
