--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,9 @@ cryptography==41.0.7
 defusedxml==0.7.1
 dill==0.3.6
 dj-database-url==2.1.0
+dj-rest-auth==5.0.2
 Django==4.2.1
-django-allauth==0.60.0
+django-allauth==0.57.0
 django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.14.0
