--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.4.2",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.6"
