--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "sharp": "^0.32.6"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "next-router-mock": "^0.9.3"
   }
 }
