--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ["main", "staging"]
+    branches: ["main", "*-main", "staging"]
   pull_request:
-    branches: ["main", "staging"]
+    branches: ["main", "*-main", "staging"]
 
 jobs:
   CI:
