--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
